# pySankey

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  pysankey.cff  setup.cfg
.github/: create_documentation_plots.py
.github/workflows/: ci.yaml  release.yml
pysankey/: __init__.py  gradient_test.ipynb  sankey.py
pysankey/sankey/: __init__.py  exceptions.py
pysankey/tests/: generic_test.py  test_create_dataframe.py  test_deprecated.py  test_error_case.py  test_readme.py  test_sankey.py
tests/: generic_test.py  test_create_dataframe.py  test_deprecated.py  test_error_case.py  test_readme.py  test_sankey.py
